# physics_simulator

./: .gitignore  Ball.cpp  Ball.hpp  CMakeLists.txt  Color.cpp  Color.h  Dust.cpp  Dust.h  Painter.h  Physics.cpp  Physics.h  Point.h  README.md  Velocity.h  World.cpp  World.h  main.cpp
black_box/: PainterImpl.cpp  View.cpp
